# pico8

./: .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  pica8-netconf-all-xml.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
devstack/lib/: networking-baremetal
doc/: requirements.txt
doc/source/: conf.py  index.rst
networking_baremetal_pica8/: __init__.py  _i18n.py  common.py  config.py  constants.py  exceptions.py  ironic_client.py
networking_baremetal_pica8/agent/: ironic_neutron_agent.py
networking_baremetal_pica8/drivers/: base.py
releasenotes/notes/: add-initial-note-8f08fd95b0149b2c.yaml  agent-notification-auto-delete-queues-a3782fbeea2b57b1.yaml  device-manager-driver-interface-741703fbfc063780.yaml  distributed-agent-hashring-6b623a7a9caf0425.yaml  drop-py-2-7-2249129e616bb1e5.yaml  fix-conflict-with-ngs-41a862c292718c3b.yaml  fix-exception-handling-openstacksdk-d3eff6f9fe9ea42f.yaml  fix-member-manager-notification-queue-not-consumed-449738d4fd799634.yaml  fix_autodelete_for_quorum_queues-e001f2d8d8ae780b.yaml  force-exit-on-comm-failure-d0a584af6a3bb373.yaml  ironic-neutron-agent-291f8aad7d53f06c.yaml  mech-agent-driver-ffc361e528668f8e.yaml  netconf-openconfig-device-driver-8fc15c9c2dc4bf17.yaml  netconf-openconfig-device-driver-lacp-support-ed9e1bc0eb784c9b.yaml  netconf-openconfig-device-driver-pre-configured-link-aggregates-2dcba8f96500d159.yaml  openconfig-library-5ecd1f158666c6c5.yaml  remove-py38-f406f765564942b7.yaml  replace-ironicclient-with-openstacksdk-75d1edd705571f94.yaml  sighup-service-reloads-configs-11cd374cc33aac83.yaml  vlan-type-support-mech-driver-31f907c76dc44923.yaml
releasenotes/source/: 2023.1.rst  2023.2.rst  2024.1.rst  2024.2.rst  conf.py  index.rst  rocky.rst  stein.rst  train.rst  ussuri.rst  victoria.rst  wallaby.rst  xena.rst  yoga.rst  zed.rst
tools/: flake8wrap.sh  run_bashate.sh
zuul.d/: networking-baremetal-jobs.yaml  project.yaml
(+38 files in other folders)
