[metadata]
name = networking_baremetal_pica8
summary = Neutron plugin that provides deep Ironic/Neutron integration.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/networking-baremetal/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    networking_baremetal_pica8

[entry_points]
oslo.config.opts =
    ironic-neutron-agent = networking_baremetal_pica8.agent.ironic_neutron_agent:list_opts
    ironic-client = networking_baremetal_pica8.ironic_client:list_opts
    baremetal = networking_baremetal_pica8.config:list_opts
    common-device-driver-opts = networking_baremetal_pica8.config:list_common_device_driver_opts
    netconf-openconfig-driver-opts = networking_baremetal_pica8.drivers.netconf.openconfig:list_driver_opts

console_scripts =
    ironic-neutron-agent = networking_baremetal_pica8.agent.ironic_neutron_agent:main

neutron.ml2.mechanism_drivers =
    baremetal = networking_baremetal_pica8.plugins.ml2.baremetal_mech:BaremetalMechanismDriver

networking_baremetal_pica8.drivers =
    netconf-openconfig = networking_baremetal_pica8.drivers.netconf.openconfig:NetconfOpenConfigDriver

[codespell]
quiet-level = 4
# Words to ignore:
# assertIn: Python's unittest method
ignore-words-list = assertIn
